# vector-database

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: functions.py  main.py
deletion/: __init__.py  delete.py
frontend/src/: App.tsx
frontend/src/components/: delete.tsx  intelligence.tsx  query.tsx  upload.tsx
insertion/: insert.py
parse/: .env  __init__.py  api.py  api_client.py  model.py  pdf.py  schema.py
query/: __init__.py  find.py
src/: App.tsx  app.module.css  index.css  main.tsx
src/auth/: auth.module.css
src/context/: data.tsx  login.tsx
src/lib/: api.ts  users.ts
src/util/: get.tsx  post.tsx  title.tsx
